# vpf

./: .gitattributes  LICENSE  README.md
firmware/: CMakeLists.txt  readme.txt  sdkconfig
firmware/main/: CMakeLists.txt  Kconfig.projbuild  main.c  main.h
firmware/main/ble/: gap.c  gap.h  gatt.c  gatt.h  server.c
firmware/main/clock/: clock.c  clock.h
firmware/main/command/: command.c  command.h
firmware/main/motor/: motor.c  motor.h
firmware/main/scales/: scales.c  scales.h
firmware/main/state/: state.c  state.h
firmware/main/worker/: worker.c  worker.h
freecad/: vpf_assembled.FCStd  vpf_cap.FCStd  vpf_feeder.FCStd  vpf_holder.FCStd  vpf_main.FCStd  vpf_ring.FCStd  vpf_tank.FCStd
kicad/: fp-lib-table  sym-lib-table  vpf.kicad_pcb  vpf.kicad_prl  vpf.kicad_pro  vpf.kicad_sch  vpf.kicad_sym
kicad/vpf.pretty/: SW_PUSH_4.kicad_mod
software/: build.gradle  settings.gradle
software/app/: build.gradle
software/app/src/main/: AndroidManifest.xml
software/app/src/main/res/drawable/: border.xml  ic_action_refresh.xml  ic_action_search.xml  ic_logo.xml  ic_menu_about.xml  ic_menu_feeders.xml
software/app/src/main/res/layout/: feeder_list_item.xml  fragment_about.xml  fragment_feeder.xml  fragment_feeders.xml  nav_header_main.xml
software/app/src/main/res/menu/: activity_main_drawer.xml
software/app/src/main/res/navigation/: mobile_navigation.xml
software/app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  themes.xml
software/app/src/main/res/values-ru/: strings.xml
software/gradle/wrapper/: gradle-wrapper.properties
(+11 files in other folders)
