idf_component_register(SRCS 
                       "ble/gap.c"
                       "ble/gatt.c"
                       "ble/server.c"
                       "motor/motor.c"
                       "scales/scales.c"
                       "clock/clock.c"
                       "state/state.c"
                       "command/command.c"
                       "worker/worker.c"
                       "main.c"
                       INCLUDE_DIRS "")
